syntax = "proto3";

option csharp_namespace = "GrpcGreeter.greet";
package greet;

import "health.proto";
import "customType.proto";

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);

  rpc StreamingFromServer (StreamingRequest) returns (stream StreamingResponse);

  rpc StreamingFromClient(stream StreamingRequest) returns(StreamingResponse);

  rpc streamingBothWays(stream StreamingRequest) returns(stream StreamingResponse);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}

message StreamingRequest{
	customType.DecimalValue value = 1;
}

message StreamingResponse{
	customType.DecimalValue value = 1;
}


